--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@react-native-firebase/firestore": "^21.6.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.7.9",
     "expo": "^52.0.0",
     "expo-dev-client": "^5.0.7",
     "expo-image-picker": "~16.0.3",
+    "expo-network": "^7.0.4",
     "expo-notifications": "~0.29.11",
     "firebase": "^11.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-kommunicate-chat": "^2.3.8",
     "react-native-reanimated": "~3.16.1",
