--- a/package.json
+++ b/package.json
@@ -13,23 +13,34 @@
     "@firebase/firestore": "^4.7.5",
     "@firebase/storage": "^0.13.4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/slider": "^4.5.5",
+    "@react-native-firebase/analytics": "^21.6.1",
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/auth": "^21.6.1",
+    "@react-native-firebase/crashlytics": "^21.6.1",
     "@react-native-firebase/firestore": "^21.6.1",
+    "@react-native-firebase/perf": "^21.6.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.7.9",
     "expo": "^52.0.0",
+    "expo-av": "^15.0.1",
     "expo-dev-client": "^5.0.7",
+    "expo-file-system": "^18.0.6",
+    "expo-image-manipulator": "^13.0.5",
     "expo-image-picker": "~16.0.3",
     "expo-network": "^7.0.4",
-    "expo-notifications": "~0.29.11",
+    "expo-notifications": "^0.29.11",
     "firebase": "^11.1.0",
+    "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-dotenv": "^3.4.11",
+    "react-native-fbsdk-next": "^13.3.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-kommunicate-chat": "^2.3.8",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
