--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-firebase/perf": "^21.6.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.7.9",
     "expo": "^52.0.0",
