จำ theme app startup

--- a/app.json
+++ b/app.json
@@ -59,6 +59,9 @@
           "sounds": ["./assets/notification.wav"]
         }
       ]
-    ]
+    ],
+    "developer": {
+      "urlType": "lan"
+    }
   }
 }
