--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "start": "npx expo start",
+    "android": "npx expo run:android",
+    "ios": "npx expo run:ios",
+    "web": "npx expo start --web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
@@ -22,7 +22,7 @@
     "@react-native-firebase/perf": "^21.6.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.7.9",
     "expo": "^52.0.0",
