--- a/eas.json
+++ b/eas.json
@@ -9,6 +9,17 @@
       "ios": {
         "simulator": true
       }
-    }
+    },
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "android": {
+        "gradleCommand": ":app:assembleDebug"
+      }
+    },
+    "preview": {
+      "distribution": "internal"
+    },
+    "production": {}
   }
 } 
