--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "cooking-chatbot",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -13,13 +12,11 @@
     "@firebase/firestore": "^4.7.5",
     "@firebase/storage": "^0.13.4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "^4.5.5",
-    "@react-native-firebase/analytics": "^21.6.1",
-    "@react-native-firebase/app": "^21.6.1",
+    "@react-native-firebase/app": "^21.6.2",
     "@react-native-firebase/auth": "^21.6.1",
-    "@react-native-firebase/crashlytics": "^21.6.1",
     "@react-native-firebase/firestore": "^21.6.1",
-    "@react-native-firebase/perf": "^21.6.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -27,12 +24,14 @@
     "axios": "^1.7.9",
     "expo": "^52.0.0",
     "expo-av": "^15.0.1",
-    "expo-dev-client": "^5.0.7",
+    "expo-build-properties": "~0.13.1",
+    "expo-dev-client": "~5.0.8",
     "expo-file-system": "^18.0.6",
     "expo-image-manipulator": "^13.0.5",
     "expo-image-picker": "~16.0.3",
     "expo-network": "^7.0.4",
     "expo-notifications": "^0.29.11",
+    "expo-status-bar": "~2.0.0",
     "firebase": "^11.1.0",
     "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
@@ -42,10 +41,9 @@
     "react-native-fbsdk-next": "^13.3.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-kommunicate-chat": "^2.3.8",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.13"
   },
@@ -53,5 +51,19 @@
     "@babel/core": "^7.25.2",
     "@react-native-community/cli": "^15.1.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "@expo/metro-runtime",
+          "@firebase/firestore",
+          "@firebase/storage",
+          "firebase",
+          "react-native-keyboard-aware-scroll-view"
+        ],
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
