--- a/package.json
+++ b/package.json
@@ -22,18 +22,20 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
     "expo": "^52.0.0",
     "expo-av": "^15.0.1",
     "expo-build-properties": "~0.13.1",
     "expo-dev-client": "~5.0.8",
     "expo-file-system": "^18.0.6",
+    "expo-haptics": "^14.0.1",
     "expo-image-manipulator": "^13.0.5",
     "expo-image-picker": "~16.0.3",
     "expo-network": "^7.0.4",
     "expo-notifications": "^0.29.11",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.1.0",
-    "lottie-react-native": "^7.1.0",
+    "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
