feat: improve typing indicator in chat - Add typing indicator inside FlatList - Fix animation and scrolling behavior - Improve timing of typing status - Update styling for dark/light mode

--- a/app.json
+++ b/app.json
@@ -55,7 +55,7 @@
         "expo-notifications",
         {
           "icon": "./assets/icon.png",
-          "color": "#00B900",
+          "color": "#6de67b",
           "sounds": ["./assets/notification.wav"]
         }
       ]
