--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.0",
     "expo-av": "^15.0.1",
     "expo-build-properties": "~0.13.1",
+    "expo-clipboard": "~7.0.1",
     "expo-dev-client": "~5.0.8",
     "expo-file-system": "^18.0.6",
     "expo-haptics": "^14.0.1",
