--- a/app.json
+++ b/app.json
@@ -4,9 +4,9 @@
     "slug": "cooking-chatbot",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/images/icon.png",
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -14,7 +14,8 @@
       "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": [
-      "**/*",
+      "assets/*",
+      "assets/images/*",
       "assets/sounds/*"
     ],
     "ios": {
@@ -30,7 +31,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.yourcompany.cookingbot",
@@ -40,10 +41,11 @@
         "CAMERA",
         "RECORD_AUDIO",
         "MODIFY_AUDIO_SETTINGS"
-      ]
+      ],
+      "enableDangerousExperimentalLeanBuilds": false
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/images/icon.png"
     },
     "newArchEnabled": true,
     "extra": {
@@ -55,9 +57,9 @@
       [
         "expo-notifications",
         {
-          "icon": "./assets/icon.png",
+          "icon": "./assets/images/icon.png",
           "color": "#6de67b",
-          "sounds": ["./assets/notification.wav"]
+          "sounds": ["./assets/sounds/notification.wav"]
         }
       ]
     ]
