--- a/package.json
+++ b/package.json
@@ -8,15 +8,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.0",
-    "@firebase/firestore": "^4.7.5",
-    "@firebase/storage": "^0.13.4",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-community/slider": "^4.5.5",
-    "@react-native-firebase/app": "^21.6.2",
-    "@react-native-firebase/auth": "^21.6.1",
-    "@react-native-firebase/firestore": "^21.6.1",
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-community/slider": "4.5.6",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -24,35 +19,37 @@
     "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
-    "expo": "^52.0.0",
-    "expo-av": "^15.0.1",
-    "expo-build-properties": "~0.13.1",
-    "expo-clipboard": "~7.0.1",
-    "expo-dev-client": "~5.0.8",
-    "expo-file-system": "^18.0.6",
-    "expo-haptics": "^14.0.1",
-    "expo-image-manipulator": "^13.0.5",
-    "expo-image-picker": "~16.0.3",
-    "expo-network": "^7.0.4",
-    "expo-notifications": "~0.29.13",
-    "expo-status-bar": "~2.0.0",
-    "firebase": "^11.1.0",
-    "lottie-react-native": "^7.2.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "expo": "^53.0.0",
+    "expo-av": "~15.1.5",
+    "expo-build-properties": "~0.14.6",
+    "expo-clipboard": "~7.1.4",
+    "expo-dev-client": "~5.2.0",
+    "expo-file-system": "~18.1.10",
+    "expo-haptics": "~14.1.4",
+    "expo-image-manipulator": "~13.1.7",
+    "expo-image-picker": "~16.1.4",
+    "expo-network": "~7.1.5",
+    "expo-notifications": "~0.31.3",
+    "expo-status-bar": "~2.2.3",
+    "firebase": "^9.23.0",
+    "lottie-react-native": "7.2.2",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-fbsdk-next": "^13.3.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.26.0",
     "@react-native-community/cli": "^15.1.3"
   },
   "private": true,
